<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/create_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new_user"
        android:textColor="@color/TextColor2"
        android:textSize="30sp" />
    <EditText
        android:layout_below="@id/create_user_tv"
        android:id="@+id/name_signup_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/name"
        android:drawablePadding="10dp"
        android:drawableTint="@color/TextColor"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@color/TextColor" />

    <EditText
        android:id="@+id/email_signup_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_below="@id/name_signup_et"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/TextColor"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/TextColor" />

    <EditText
        android:id="@+id/pass_signup_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_below="@id/email_signup_et"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/TextColor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/TextColor" />
    <EditText
        android:id="@+id/phone_signup_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_below="@id/pass_signup_et"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:drawableTint="@color/TextColor"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/TextColor" />
    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_signup_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:background="@drawable/round_button"
        android:elevation="5dp"
        android:onClick="createNewAccount"
        android:text="@string/signup"
        android:textColor="@color/text_white" />


</RelativeLayout>